2011-02-03  Jakub Jelinek  <jakub@redhat.com>

	PR lto/47274
	* lto-streamer-out.c (write_symbol): When writing kind and visibility,
	copy them into a unsigned char variable and pass address of it to
	lto_output_data_stream.

	PR target/47564
	* toplev.c (target_reinit): Save and restore *crtl and regno_reg_rtx
	around backend_init_target and lang_dependent_init_target calls.
	* cgraphunit.c (cgraph_debug_gimple_stmt): New function.
	(verify_cgraph_node): Don't call set_cfun here.  Use
	cgraph_debug_gimple_stmt instead of debug_gimple_stmt.
	Set error_found for incorrectly represented calls to thunks.

2011-02-03  Alexandre Oliva  <aoliva@redhat.com>

	PR debug/43092
	PR rtl-optimization/43494
	* rtl.h (for_each_inc_dec_fn): New type.
	(for_each_inc_dec): Declare.
	* rtlanal.c (struct for_each_inc_dec_ops): New type.
	(for_each_inc_dec_find_inc_dec): New fn.
	(for_each_inc_dec_find_mem): New fn.
	(for_each_inc_dec): New fn.
	* dse.c (struct insn_size): Remove.
	(replace_inc_dec, replace_inc_dec_mem): Remove.
	(emit_inc_dec_insn_before): New fn.
	(check_for_inc_dec): Use it, along with for_each_inc_dec.
	(canon_address): Pass mem modes to cselib_lookup.
	* cselib.h (cselib_lookup): Add memmode argument.  Adjust callers.
	(cselib_lookup_from_insn): Likewise.
	(cselib_subst_to_values): Likewise.
	* cselib.c (find_slot_memmode): New var.
	(cselib_find_slot): New fn.  Use it instead of
	htab_find_slot_with_hash everywhere.
	(entry_and_rtx_equal_p): Use find_slot_memmode.
	(autoinc_split): New fn.
	(rtx_equal_for_cselib_p): Rename and implement in terms of...
	(rtx_equal_for_cselib_1): ... this.  Take memmode, pass it on.
	Deal with autoinc.  Special-case recursion into MEMs.
	(cselib_hash_rtx): Likewise.
	(cselib_lookup_mem): Infer pmode from address mode.  Distinguish
	address and MEM modes.
	(cselib_subst_to_values): Add memmode, pass it on.
	Deal with autoinc.
	(cselib_lookup): Add memmode argument, pass it on.
	(cselib_lookup_from_insn): Add memmode.